fix(api): fix cart product endpoints
